fixed height style issue; removed visible key

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .App {
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
     background-color: hsl(0, 100%, 99%);
     display: flex;
@@ -35,7 +35,7 @@
 
 .Contactslist {
     width: 90%;
-    height: 100%;
+    min-height: 100vh;
 }
 
 .ContactslistContainer {
